Funclogic/week6/advanced3/parser.output
   0  $accept : %entry% $end

   1  toplevel : expr SEMISEMI
   2           | LET var EQ expr SEMISEMI
   3           | LET REC var var EQ expr SEMISEMI

   4  expr : LET var EQ expr IN expr
   5       | LET REC var var EQ expr IN expr
   6       | IF expr THEN expr ELSE expr
   7       | FUN var ARROW expr
   8       | DFUN var ARROW expr
   9       | arith_expr EQ arith_expr
  10       | arith_expr LT arith_expr
  11       | arith_expr

  12  arith_expr : arith_expr PLUS factor_expr
  13             | arith_expr MINUS factor_expr
  14             | factor_expr

  15  factor_expr : factor_expr TIMES app_expr
  16              | factor_expr DIV app_expr
  17              | app_expr

  18  app_expr : app_expr atomic_expr
  19           | atomic_expr

  20  atomic_expr : INT
  21              | BOOL
  22              | ID
  23              | LPAR expr RPAR

  24  var : ID

  25  %entry% : '\001' toplevel

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . toplevel  (25)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 6
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	DFUN  shift 10
	.  error

	toplevel  goto 11
	expr  goto 12
	arith_expr  goto 13
	factor_expr  goto 14
	app_expr  goto 15
	atomic_expr  goto 16


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	atomic_expr : INT .  (20)

	.  reduce 20


state 4
	atomic_expr : BOOL .  (21)

	.  reduce 21


state 5
	atomic_expr : ID .  (22)

	.  reduce 22


state 6
	toplevel : LET . var EQ expr SEMISEMI  (2)
	toplevel : LET . REC var var EQ expr SEMISEMI  (3)
	expr : LET . var EQ expr IN expr  (4)
	expr : LET . REC var var EQ expr IN expr  (5)

	ID  shift 17
	REC  shift 18
	.  error

	var  goto 19


state 7
	expr : IF . expr THEN expr ELSE expr  (6)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 20
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	DFUN  shift 10
	.  error

	expr  goto 21
	arith_expr  goto 13
	factor_expr  goto 14
	app_expr  goto 15
	atomic_expr  goto 16


state 8
	atomic_expr : LPAR . expr RPAR  (23)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 20
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	DFUN  shift 10
	.  error

	expr  goto 22
	arith_expr  goto 13
	factor_expr  goto 14
	app_expr  goto 15
	atomic_expr  goto 16


state 9
	expr : FUN . var ARROW expr  (7)

	ID  shift 17
	.  error

	var  goto 23


state 10
	expr : DFUN . var ARROW expr  (8)

	ID  shift 17
	.  error

	var  goto 24


state 11
	%entry% : '\001' toplevel .  (25)

	.  reduce 25


state 12
	toplevel : expr . SEMISEMI  (1)

	SEMISEMI  shift 25
	.  error


state 13
	expr : arith_expr . EQ arith_expr  (9)
	expr : arith_expr . LT arith_expr  (10)
	expr : arith_expr .  (11)
	arith_expr : arith_expr . PLUS factor_expr  (12)
	arith_expr : arith_expr . MINUS factor_expr  (13)

	PLUS  shift 26
	MINUS  shift 27
	EQ  shift 28
	LT  shift 29
	IN  reduce 11
	THEN  reduce 11
	ELSE  reduce 11
	RPAR  reduce 11
	SEMISEMI  reduce 11


state 14
	arith_expr : factor_expr .  (14)
	factor_expr : factor_expr . TIMES app_expr  (15)
	factor_expr : factor_expr . DIV app_expr  (16)

	TIMES  shift 30
	DIV  shift 31
	IN  reduce 14
	PLUS  reduce 14
	MINUS  reduce 14
	EQ  reduce 14
	LT  reduce 14
	THEN  reduce 14
	ELSE  reduce 14
	RPAR  reduce 14
	SEMISEMI  reduce 14


state 15
	factor_expr : app_expr .  (17)
	app_expr : app_expr . atomic_expr  (18)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	IN  reduce 17
	PLUS  reduce 17
	TIMES  reduce 17
	MINUS  reduce 17
	DIV  reduce 17
	EQ  reduce 17
	LT  reduce 17
	THEN  reduce 17
	ELSE  reduce 17
	RPAR  reduce 17
	SEMISEMI  reduce 17

	atomic_expr  goto 32


state 16
	app_expr : atomic_expr .  (19)

	.  reduce 19


state 17
	var : ID .  (24)

	.  reduce 24


state 18
	toplevel : LET REC . var var EQ expr SEMISEMI  (3)
	expr : LET REC . var var EQ expr IN expr  (5)

	ID  shift 17
	.  error

	var  goto 33


state 19
	toplevel : LET var . EQ expr SEMISEMI  (2)
	expr : LET var . EQ expr IN expr  (4)

	EQ  shift 34
	.  error


state 20
	expr : LET . var EQ expr IN expr  (4)
	expr : LET . REC var var EQ expr IN expr  (5)

	ID  shift 17
	REC  shift 35
	.  error

	var  goto 36


state 21
	expr : IF expr . THEN expr ELSE expr  (6)

	THEN  shift 37
	.  error


state 22
	atomic_expr : LPAR expr . RPAR  (23)

	RPAR  shift 38
	.  error


state 23
	expr : FUN var . ARROW expr  (7)

	ARROW  shift 39
	.  error


state 24
	expr : DFUN var . ARROW expr  (8)

	ARROW  shift 40
	.  error


state 25
	toplevel : expr SEMISEMI .  (1)

	.  reduce 1


state 26
	arith_expr : arith_expr PLUS . factor_expr  (12)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	.  error

	factor_expr  goto 41
	app_expr  goto 15
	atomic_expr  goto 16


state 27
	arith_expr : arith_expr MINUS . factor_expr  (13)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	.  error

	factor_expr  goto 42
	app_expr  goto 15
	atomic_expr  goto 16


state 28
	expr : arith_expr EQ . arith_expr  (9)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	.  error

	arith_expr  goto 43
	factor_expr  goto 14
	app_expr  goto 15
	atomic_expr  goto 16


state 29
	expr : arith_expr LT . arith_expr  (10)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	.  error

	arith_expr  goto 44
	factor_expr  goto 14
	app_expr  goto 15
	atomic_expr  goto 16


state 30
	factor_expr : factor_expr TIMES . app_expr  (15)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	.  error

	app_expr  goto 45
	atomic_expr  goto 16


state 31
	factor_expr : factor_expr DIV . app_expr  (16)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	.  error

	app_expr  goto 46
	atomic_expr  goto 16


state 32
	app_expr : app_expr atomic_expr .  (18)

	.  reduce 18


state 33
	toplevel : LET REC var . var EQ expr SEMISEMI  (3)
	expr : LET REC var . var EQ expr IN expr  (5)

	ID  shift 17
	.  error

	var  goto 47


state 34
	toplevel : LET var EQ . expr SEMISEMI  (2)
	expr : LET var EQ . expr IN expr  (4)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 20
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	DFUN  shift 10
	.  error

	expr  goto 48
	arith_expr  goto 13
	factor_expr  goto 14
	app_expr  goto 15
	atomic_expr  goto 16


state 35
	expr : LET REC . var var EQ expr IN expr  (5)

	ID  shift 17
	.  error

	var  goto 49


state 36
	expr : LET var . EQ expr IN expr  (4)

	EQ  shift 50
	.  error


state 37
	expr : IF expr THEN . expr ELSE expr  (6)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 20
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	DFUN  shift 10
	.  error

	expr  goto 51
	arith_expr  goto 13
	factor_expr  goto 14
	app_expr  goto 15
	atomic_expr  goto 16


state 38
	atomic_expr : LPAR expr RPAR .  (23)

	.  reduce 23


state 39
	expr : FUN var ARROW . expr  (7)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 20
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	DFUN  shift 10
	.  error

	expr  goto 52
	arith_expr  goto 13
	factor_expr  goto 14
	app_expr  goto 15
	atomic_expr  goto 16


state 40
	expr : DFUN var ARROW . expr  (8)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 20
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	DFUN  shift 10
	.  error

	expr  goto 53
	arith_expr  goto 13
	factor_expr  goto 14
	app_expr  goto 15
	atomic_expr  goto 16


state 41
	arith_expr : arith_expr PLUS factor_expr .  (12)
	factor_expr : factor_expr . TIMES app_expr  (15)
	factor_expr : factor_expr . DIV app_expr  (16)

	TIMES  shift 30
	DIV  shift 31
	IN  reduce 12
	PLUS  reduce 12
	MINUS  reduce 12
	EQ  reduce 12
	LT  reduce 12
	THEN  reduce 12
	ELSE  reduce 12
	RPAR  reduce 12
	SEMISEMI  reduce 12


state 42
	arith_expr : arith_expr MINUS factor_expr .  (13)
	factor_expr : factor_expr . TIMES app_expr  (15)
	factor_expr : factor_expr . DIV app_expr  (16)

	TIMES  shift 30
	DIV  shift 31
	IN  reduce 13
	PLUS  reduce 13
	MINUS  reduce 13
	EQ  reduce 13
	LT  reduce 13
	THEN  reduce 13
	ELSE  reduce 13
	RPAR  reduce 13
	SEMISEMI  reduce 13


state 43
	expr : arith_expr EQ arith_expr .  (9)
	arith_expr : arith_expr . PLUS factor_expr  (12)
	arith_expr : arith_expr . MINUS factor_expr  (13)

	PLUS  shift 26
	MINUS  shift 27
	IN  reduce 9
	THEN  reduce 9
	ELSE  reduce 9
	RPAR  reduce 9
	SEMISEMI  reduce 9


state 44
	expr : arith_expr LT arith_expr .  (10)
	arith_expr : arith_expr . PLUS factor_expr  (12)
	arith_expr : arith_expr . MINUS factor_expr  (13)

	PLUS  shift 26
	MINUS  shift 27
	IN  reduce 10
	THEN  reduce 10
	ELSE  reduce 10
	RPAR  reduce 10
	SEMISEMI  reduce 10


state 45
	factor_expr : factor_expr TIMES app_expr .  (15)
	app_expr : app_expr . atomic_expr  (18)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	IN  reduce 15
	PLUS  reduce 15
	TIMES  reduce 15
	MINUS  reduce 15
	DIV  reduce 15
	EQ  reduce 15
	LT  reduce 15
	THEN  reduce 15
	ELSE  reduce 15
	RPAR  reduce 15
	SEMISEMI  reduce 15

	atomic_expr  goto 32


state 46
	factor_expr : factor_expr DIV app_expr .  (16)
	app_expr : app_expr . atomic_expr  (18)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	IN  reduce 16
	PLUS  reduce 16
	TIMES  reduce 16
	MINUS  reduce 16
	DIV  reduce 16
	EQ  reduce 16
	LT  reduce 16
	THEN  reduce 16
	ELSE  reduce 16
	RPAR  reduce 16
	SEMISEMI  reduce 16

	atomic_expr  goto 32


state 47
	toplevel : LET REC var var . EQ expr SEMISEMI  (3)
	expr : LET REC var var . EQ expr IN expr  (5)

	EQ  shift 54
	.  error


state 48
	toplevel : LET var EQ expr . SEMISEMI  (2)
	expr : LET var EQ expr . IN expr  (4)

	IN  shift 55
	SEMISEMI  shift 56
	.  error


state 49
	expr : LET REC var . var EQ expr IN expr  (5)

	ID  shift 17
	.  error

	var  goto 57


state 50
	expr : LET var EQ . expr IN expr  (4)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 20
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	DFUN  shift 10
	.  error

	expr  goto 58
	arith_expr  goto 13
	factor_expr  goto 14
	app_expr  goto 15
	atomic_expr  goto 16


state 51
	expr : IF expr THEN expr . ELSE expr  (6)

	ELSE  shift 59
	.  error


state 52
	expr : FUN var ARROW expr .  (7)

	.  reduce 7


state 53
	expr : DFUN var ARROW expr .  (8)

	.  reduce 8


state 54
	toplevel : LET REC var var EQ . expr SEMISEMI  (3)
	expr : LET REC var var EQ . expr IN expr  (5)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 20
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	DFUN  shift 10
	.  error

	expr  goto 60
	arith_expr  goto 13
	factor_expr  goto 14
	app_expr  goto 15
	atomic_expr  goto 16


state 55
	expr : LET var EQ expr IN . expr  (4)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 20
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	DFUN  shift 10
	.  error

	expr  goto 61
	arith_expr  goto 13
	factor_expr  goto 14
	app_expr  goto 15
	atomic_expr  goto 16


state 56
	toplevel : LET var EQ expr SEMISEMI .  (2)

	.  reduce 2


state 57
	expr : LET REC var var . EQ expr IN expr  (5)

	EQ  shift 62
	.  error


state 58
	expr : LET var EQ expr . IN expr  (4)

	IN  shift 55
	.  error


state 59
	expr : IF expr THEN expr ELSE . expr  (6)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 20
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	DFUN  shift 10
	.  error

	expr  goto 63
	arith_expr  goto 13
	factor_expr  goto 14
	app_expr  goto 15
	atomic_expr  goto 16


state 60
	toplevel : LET REC var var EQ expr . SEMISEMI  (3)
	expr : LET REC var var EQ expr . IN expr  (5)

	IN  shift 64
	SEMISEMI  shift 65
	.  error


state 61
	expr : LET var EQ expr IN expr .  (4)

	.  reduce 4


state 62
	expr : LET REC var var EQ . expr IN expr  (5)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 20
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	DFUN  shift 10
	.  error

	expr  goto 66
	arith_expr  goto 13
	factor_expr  goto 14
	app_expr  goto 15
	atomic_expr  goto 16


state 63
	expr : IF expr THEN expr ELSE expr .  (6)

	.  reduce 6


state 64
	expr : LET REC var var EQ expr IN . expr  (5)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 20
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	DFUN  shift 10
	.  error

	expr  goto 67
	arith_expr  goto 13
	factor_expr  goto 14
	app_expr  goto 15
	atomic_expr  goto 16


state 65
	toplevel : LET REC var var EQ expr SEMISEMI .  (3)

	.  reduce 3


state 66
	expr : LET REC var var EQ expr . IN expr  (5)

	IN  shift 64
	.  error


state 67
	expr : LET REC var var EQ expr IN expr .  (5)

	.  reduce 5


24 terminals, 9 nonterminals
26 grammar rules, 68 states
